Docs : create HTML tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <title>About me</title>
 </head>
 <body>
-    
+   <h1>Information</h1>
+<div class="myName">Evgeny Kerimov</div>
+
+<h2>Contacts</h2>
+<ol>
+    <li>Location: Saint_Petersburg, Russia</li>
+    <li>Phone: +7 951 677 00 76</li>
+    <li>Email: EvgenSpilberg@gmail.com</li>
+    <li>GitHub: https://github.com/Greblips</li>
+</ol>
+
+
+
+<h2>About Me:</h2>
+<div class="aboutMe">I have good interpersonal skills, am an excellent team worker and very willing to learn and develop new skills.
+    I am reliable and dependable and often seek new responsibilities within a wide range of employment areas.</div>
+
+<h2>Skills</h2>
+
+<ol>
+    <li>HTML</li>
+    <li>CSS/SASS</li>
+    <li>JavaScript (Basic)</li>
+    <li>Git</li>
+    <li>Photoshop</li>
+    <li>Figma</li>
+    <li>BootStrap</li>
+    <li>Webpack</li>
+</ol>
+
+
+<h2>Education:</h2> 
+
+<ol>
+    <li>Computer Engineer and Automated Systems Engineer</li>
+    <li>Avalon Academy</li>
+    <li>HTML Academy</li>
+    <li>English - A</li>
+</ol>
+
 </body>
 </html>
