--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1>Information</h1>
         <div class="mainBlock">
             <div class="myName">Evgeny Kerimov</div>
-            <div class="aboutMe">I have good interpersonal skills, am an excellent team worker and very willing to learn and develop new skills.
-                I am reliable and dependable and often seek new responsibilities within a wide range of employment areas.</div>
+            <div class="aboutMe">I have good interpersonal skills, am an excellent team worker and very willing to learn and develop new skills.I am reliable and dependable and often seek new responsibilities within a wide range of employment areas.</div>
         </div>
         <div class="listAndFoto">
             <div class="list">
