Docs : edit text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>Email: EvgenSpilberg@gmail.com</li>
                     <li>GitHub:<a href="https://github.com/Greblips">Github</a></li>
                 </ol>
-                <h2>Skills</h2>
+                <h2>Skills:</h2>
                 <ol>
                     <li>HTML</li>
                     <li>CSS/SASS</li>
